style(grid-fields): 统一引用路径引号并使用CSS变量控制标签间距
将SCSS文件中的引用路径从单引号改为双引号以保持一致性
添加--label-margin-top变量集中管理标签上边距

--- a/src/lib/shelf/grid-fields/style/gf-it-label.scss
+++ b/src/lib/shelf/grid-fields/style/gf-it-label.scss
@@ -1,4 +1,4 @@
-@use '@site0/tijs/sass/_all.scss' as *;
+@use "@site0/tijs/sass/_all.scss" as *;
 
 .ti-grid-fiels-item.part-label {
   // &.as-info-box {
@@ -14,7 +14,7 @@
   .as-label-title {
     @include flex-align($ai: center, $ac: center);
     border-bottom: 1px solid var(--ti-color-border-shallow);
-    margin-top: 1.6em;
+    margin-top: var(--label-margin-top);
     > .ti-icon:first-child {
       margin-right: 0.3em;
     }
