--- a/src/lib/shelf/grid-fields/style/ti-grid-fields.scss
+++ b/src/lib/shelf/grid-fields/style/ti-grid-fields.scss
@@ -1,9 +1,10 @@
-@use '@site0/tijs/sass/_all.scss' as *;
+@use "@site0/tijs/sass/_all.scss" as *;
 
 .ti-grid-fields {
   width: 100%;
   height: 100%;
   overflow: auto;
+  --label-margin-top: 1.6em;
   &.fixed-footer {
     @include flex-align-v-nowrap;
   }
@@ -87,11 +88,11 @@
       font-size: var(--ti-fontsz-#{$sz});
     }
   }
-  @include __aspect_fontsz('t');
-  @include __aspect_fontsz('s');
-  @include __aspect_fontsz('m');
-  @include __aspect_fontsz('b');
-  @include __aspect_fontsz('h');
+  @include __aspect_fontsz("t");
+  @include __aspect_fontsz("s");
+  @include __aspect_fontsz("m");
+  @include __aspect_fontsz("b");
+  @include __aspect_fontsz("h");
 
   //-------------------------------------------------------------
   @mixin __aspect_body_gap($sz) {
@@ -107,11 +108,11 @@
       }
     }
   }
-  @include __aspect_body_gap('t');
-  @include __aspect_body_gap('s');
-  @include __aspect_body_gap('m');
-  @include __aspect_body_gap('b');
-  @include __aspect_body_gap('h');
+  @include __aspect_body_gap("t");
+  @include __aspect_body_gap("s");
+  @include __aspect_body_gap("m");
+  @include __aspect_body_gap("b");
+  @include __aspect_body_gap("h");
   //-------------------------------------------------------------
   &.no-body-padding {
     padding: 0;
