feat(input/date): 实现日期输入组件与日历弹窗交互功能
添加日期输入组件的日历弹窗功能，包括：
1. 新增 InputDateEmitter 类型定义
2. 实现 useInputDateApi 核心逻辑
3. 添加日历弹窗的样式和定位逻辑
4. 完善组件与日历的交互逻辑
5. 移除 datetime 组件中多余的 suffixIconForCopy 属性

--- a/src/lib/input/date/ti-input-date.scss
+++ b/src/lib/input/date/ti-input-date.scss
@@ -1,2 +1,17 @@
-.ti-input-date {
+@use '@site0/tijs/sass/_all.scss' as *;
+
+.ti-input-data-popmask {
+  position: fixed;
+  inset: 0;
+  z-index: $z-mask;
+}
+.ti-input-date-popup {
+  position: fixed;
+  padding: var(--ti-gap-m);
+  background-color: var(--ti-color-body);
+  border-radius: var(--ti-measure-r-s);
+  box-shadow: -1px -1px var(--ti-color-light), 1px 1px var(--ti-color-dark),
+    4px 4px 12px var(--ti-color-mask-thin);
+  overflow: hidden;
+  z-index: $z-menu;
 }
