--- a/src/lib/shelf/calendar/ti-calendar.scss
+++ b/src/lib/shelf/calendar/ti-calendar.scss
@@ -65,6 +65,8 @@
           border-radius: var(--cell-radius);
           &:hover {
             cursor: pointer;
+            background-color: var(--ti-color-highlight);
+            color: var(--ti-color-highlight-f);
           }
         }
         //-----------------------------------------------
