--- a/src/lib/input/box2/ti-input-box.scss
+++ b/src/lib/input/box2/ti-input-box.scss
@@ -93,6 +93,7 @@
         text-align: center;
         position: absolute;
         inset: 0;
+        width: unset;
         font-size: calc(var(--box-fontsz) * 1.2);
         transition: transform 0.6s, opacity 0.3s;
       }
