feat: 实现时间输入组件功能并修复样式问题
refactor(input): 重构时间输入组件逻辑和样式
fix(input): 修正日期选择弹窗的样式类名错误
feat(input): 添加数字输入框的填充功能
style(input): 调整输入框的布局和样式
docs(input): 更新类型定义和文档注释

--- a/src/lib/input/box2/ti-input-box.scss
+++ b/src/lib/input/box2/ti-input-box.scss
@@ -7,7 +7,9 @@
   --box-color-focus-border: var(--ti-color-primary);
   --box-color-focus-text: var(--ti-color-highlight-f);
   --box-color-focus-bg: var(--ti-color-highlight);
+  --box-fontsz: inherits;
   @include flex-align-nowrap($ai: stretch);
+  font-size: var(--box-fontsz);
   //-----------------------------------------------------
   > aside {
     @include font-fixed;
