--- a/src/lib/input/date/ti-input-date.scss
+++ b/src/lib/input/date/ti-input-date.scss
@@ -1,6 +1,6 @@
 @use '@site0/tijs/sass/_all.scss' as *;
 
-.ti-input-data-popmask {
+.ti-input-date-popmask {
   position: fixed;
   inset: 0;
   z-index: $z-mask;
