feat(datetime): 增加时间选择功能并优化日期时间组件
- 添加时间输入部分到日期选择器
- 扩展日期时间组件的类型定义以支持时间模式
- 调整日期时间输入框的默认宽度
- 更新示例代码展示完整日期时间格式
- 重构日期时间组件API以支持时间和日期分别处理

--- a/src/lib/input/datetime/ti-input-datetime.scss
+++ b/src/lib/input/datetime/ti-input-datetime.scss
@@ -15,3 +15,10 @@
   overflow: hidden;
   z-index: $z-menu;
 }
+
+.ti-input-datetime-part-timer {
+  @include flex-center;
+  border-top: 2px solid var(--ti-color-border-thin);
+  background-color: var(--ti-color-body);
+  padding: 1em;
+}
