feat(墙贴组件): 增加自定义墙贴项功能并添加图标尺寸变量
为墙贴组件添加 wallItem 属性，支持通过回调函数自定义每个墙贴项的渲染方式
在样式变量中新增图标尺寸相关变量(--ti-iconsz-*)
重构 getIcon 函数参数类型为 IconInput

--- a/src/assets/style/measure/comfy.scss
+++ b/src/assets/style/measure/comfy.scss
@@ -28,6 +28,12 @@
   --ti-box-pad-b: 1em; // big
   --ti-box-pad-h: 1.5em; // hug
 
+  --ti-iconsz-t: 16px; // tiny
+  --ti-iconsz-s: 32px; // small
+  --ti-iconsz-m: 64px; // middle
+  --ti-iconsz-b: 128px; // big
+  --ti-iconsz-h: 256px; // hug
+
   --ti-fontsz-page: 14px;
   --ti-fontsz-box: 12px;
   --ti-fontsz-label: 1em;
