fix(wall): 修复选择项取消逻辑并调整图标尺寸
移除重置选择项时的数据依赖，改为直接调用取消方法
调整图标尺寸变量值以优化显示效果

--- a/src/lib/input/switcher/ti-switcher.scss
+++ b/src/lib/input/switcher/ti-switcher.scss
@@ -7,7 +7,7 @@
   @include aspect_gap('&.item-gap');
   //---------------------------------------
   .sw-item {
-    @include flex-align-nowrap;
+    @include flex-align-nowrap($jc:center);
     @include aspect_radius('&.item-r');
     @include aspect_color('&.is-checked.is');
     @include aspect_color_fborder('&.is');
