style: 调整样式和移除冗余代码
- 移除 ti-tags.scss 中冗余的 padding 属性
- 在 bar-item-info.scss 中添加 flex-center 混入
- 更新 bar.scss 中的 padding 使用 CSS 变量
- 注释掉 TiTags.vue 中的调试日志
- 在 ti-filter-bar.scss 中添加 gap 和部分样式
- 为 ti-filter-bar-types.ts 添加 onChange 和 onSearch 回调类型
- 在 use-ti-filter-bar-api.ts 中触发用户自定义回调

--- a/src/lib/edit/filter-bar/ti-filter-bar.scss
+++ b/src/lib/edit/filter-bar/ti-filter-bar.scss
@@ -2,6 +2,16 @@
 
 .ti-filter-bar {
   @include flex-align-nowrap;
+  gap: var(--ti-gap-s);
+  //-----------------------------------------------------
+  > .part-head {
+    @include flex-align-nowrap;
+    gap: var(--ti-gap-s);
+  }
+  //-----------------------------------------------------
+  > .part-tail {
+    @include flex-align-nowrap;
+  }
   //-----------------------------------------------------
   > .part-major {
     @include flex-align-nowrap;
