--- a/src/lib/action/actionbar/style/bar-item-info.scss
+++ b/src/lib/action/actionbar/style/bar-item-info.scss
@@ -15,6 +15,7 @@
   }
   //-----------------------------------------------------
   .item-text {
+    @include flex-center;
     white-space: nowrap;
     flex: 1 1 auto;
     padding: 0 1em;
