--- a/src/lib/action/actionbar/style/bar.scss
+++ b/src/lib/action/actionbar/style/bar.scss
@@ -39,7 +39,7 @@
       @include flex-align-nowrap($ai: center);
       flex: 1 1 auto;
       font-weight: bold;
-      padding: 0 0.6em;
+      padding: 0 var(--ti-gap-m);
       > .ti-icon {
         flex: 0 0 auto;
         font-size: 1.5em;
