feat(field): 添加日期和日期时间标签字段函数
style: 统一代码格式和引号使用
fix(actionbar): 调整子项文本对齐方式

--- a/src/lib/action/actionbar/style/bar-item-info.scss
+++ b/src/lib/action/actionbar/style/bar-item-info.scss
@@ -73,6 +73,9 @@
   &[aspect="sub"],
   &[bar-layout-mode="V"] {
     grid-template-columns: auto 1fr;
+    .item-text {
+      justify-content: flex-start;
+    }
   }
   //-----------------------------------------------------
   &.is-enabled {
