fix(edit/filter-bar): 修复过滤器动作条默认配置问题
修复动作条默认项目配置错误，调整默认动作项为"search"和"edit_reset"
修复未设置vars时未使用props.vars的问题
调整样式，为过滤器条添加内边距
优化标签栏动作条选择器

--- a/src/lib/edit/filter-bar/ti-filter-bar.scss
+++ b/src/lib/edit/filter-bar/ti-filter-bar.scss
@@ -3,6 +3,7 @@
 .ti-filter-bar {
   @include flex-align-nowrap;
   gap: var(--ti-gap-s);
+  padding: var(--ti-gap-s) var(--ti-gap-m);
   //-----------------------------------------------------
   > .part-head {
     @include flex-align-nowrap;
