--- a/src/assets/style/color/dark.scss
+++ b/src/assets/style/color/dark.scss
@@ -67,4 +67,7 @@
   --ti-color-star: #cc3;
   --ti-color-star-b: #ee0;
   --ti-color-star-r: #663;
+  --ti-color-fog: rgba(200, 232, 255, 0.6);
+  --ti-color-fog-b: rgba(200, 232, 255, 0.5);
+  --ti-color-fog-r: rgba(200, 232, 255, 0.2);
 }
