--- a/src/assets/style/color/light.scss
+++ b/src/assets/style/color/light.scss
@@ -67,4 +67,7 @@
   --ti-color-star: rgb(231, 231, 24);
   --ti-color-star-b: #ee0;
   --ti-color-star-r: #552;
+  --ti-color-fog: rgba(0, 32, 50, 0.6);
+  --ti-color-fog-b: rgba(0, 32, 50, 0.5);
+  --ti-color-fog-r: rgba(0, 32, 50, 0.1);
 }
